--- a/gallery.css
+++ b/gallery.css
@@ -539,6 +539,11 @@ header {
              .gallery {
                 margin-top: 3rem;
             }
+            
+            
+            .close-icon {
+                margin-top: 3rem;
+            }
          
         }
 
