--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 
 
-
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
 
 * {
@@ -21,6 +20,18 @@
     --transition-1: 0.25s ease;
     --transition-2: 0.5s ease;
 }
+
+
+.warning {
+  background-color: #ffcc00;
+  color: #333;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+
 
 body {
     background-color:#f3f3f3 ;
@@ -104,6 +115,10 @@ header {
        z-index: 10001;
        display: none;  
    }
+
+   .buchen {
+    visibility: hidden;
+   }
   
    .btn {
     background-color: var(--primary-color);
@@ -168,7 +183,6 @@ header {
   .btn-hover:is(:hover, :focus)::after { --scale: 500; }
   
  .btn2-hover:is(:hover, :focus)::after { --scale: 500; }
-
 
    
 
@@ -315,10 +329,10 @@ header {
     padding-top: 0em;
 }
 
-iframe {
+.main-map iframe {
     max-width: 100%;
     border-radius: 10px;
-    min-height: 576px;
+    min-height:496px;
     
     
     
@@ -327,8 +341,8 @@ iframe {
 .overlay {
     background:transparent; 
     position:relative;   
-    min-height:576px; /* your iframe height */
-    top:576px;  /* your iframe height */ 
+    min-height:496px; /* your iframe height */
+    top:496px;  /* your iframe height */ 
  }
 
 
@@ -341,10 +355,26 @@ iframe {
     margin-top: 1rem;
 }
 
+
 .about-img img {
     width: 80%;
     border-radius: 70px;
+
 }
+
+
+.about-img iframe {
+    width: 1000px;
+    height: 700px;
+}
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 3em;
+  }
+
 
 .about-text span {
     font-weight: 600;
@@ -388,15 +418,6 @@ iframe {
     flex-wrap: wrap;
 }
 
-.about-img {
-    width: 90%;
-    height: 100%;
-}
-
-.about-img img {
-    
-    height: 90%;
-}
 
 
 .footer {
@@ -476,6 +497,39 @@ ul {
 }
 
 
+.cookie-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    text-align: center;
+    padding: 15px;
+}
+
+.cookie-popup-content p {
+    margin: 0;
+    padding: 0 10px;
+}
+
+.cookie-popup-button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 10px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
 @media (max-width: 1920px)  {
 
     .see-container {   
@@ -514,14 +568,9 @@ ul {
      font-size: 1.2rem;
  }
 
-
- .about-img {
-    width: 90%;
-}
-
-.about-img img {
-    width: 90%;
-    height: 90%;
+ .about-img iframe {
+    width: 800px;
+    height: 400px;
 }
 
  }
@@ -580,10 +629,11 @@ ul {
         width: 100%;
      }
 
-     video {
-        display: block;
-        width: 100%;
+     .about-img iframe {
+        width: 600px;
+        height: 400px;
     }
+    
 
 }
 
@@ -602,40 +652,42 @@ ul {
      
      @media (max-width: 900px) {
 
-        .navbar {
-            position: fixed;
-            right: 0px;
-            height: 92vh;
-            top: 8vh;
-            background-color: black;
-            display: flex;
-            width: 70%;
-            display: inline-block;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 90px;
-            transform: translateX(100%);
-            transition: transform 0.5s ease-in;
-            z-index: 1000;
-             }
-    
-             .navbar a {
-                float: none;
-                padding-left: 0px;
-                letter-spacing: 3px;
-                font-size: 14px;
-                font-weight: bold;
-               
-              
-               
-            }
+       
 
+             .navbar {
+                position: fixed;
+                right: 0px;
+                height: 92vh;
+                top: 8vh;
+                background-color: black;
+                display: flex;
+                width: 70%;
+                display: inline-block;
+                text-align: center;
+                vertical-align: middle;
+                line-height: 90px;
+                transform: translateX(100%);
+                transition: transform 0.5s ease-in;
+                z-index: 1000;
+                
+                 }
+        
+                 .navbar a {
+                    float: none;
+                    padding-left: 0px;
+                    letter-spacing: 3px;
+                    font-size: 14px;
+                    font-weight: bold; 
+                }
+            
+                 .navbar li {
+                     opacity: 0;
+                     padding-bottom: 26px;
+                 }
 
-             .navbar li  {
-                opacity: 0;
-                padding-bottom: 26px;
-                padding-top: 26px;  
-             }
+                 .buchen {
+                    visibility: visible;
+                   }
 
              #menu-icon {
                 display: block;
@@ -702,6 +754,11 @@ ul {
          .see-container {
             display: none;
         }
+        
+        .main-map {
+
+    padding-top: 2em;
+}
 
         .about-container {
             grid-template-columns: 1fr;
@@ -735,6 +792,12 @@ ul {
         
         
     }
+    
+      .warning {
+   margin-top: 4rem;
+  }
+
+    
 
     section {
         padding: 20px 14px;
@@ -744,34 +807,28 @@ ul {
         padding-top: 7em;
     }
 
+ 
+
      .navbar {
-    position: fixed;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    display: flex;
-    flex-direction: column;
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 90px;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-    z-index: 1000;
+        position: fixed;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        display: flex;
+        flex-direction: column;
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 90px;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        z-index: 1000;
+        
+         }
     
-     }
 
      .navbar li {
          opacity: 0;
-     }
-     
-
-
-     .navbar li  {
-        margin-left: 0rem;
-        opacity: 0;
-        padding-bottom: 26px;
-        padding-top: 26px;  
      }
 
 
@@ -833,20 +890,17 @@ ul {
           }
 
 
-     
-        
-        .about-img  {
-           height: 80%;
+          .about-img iframe {
+            display: block;
+            width: 100%;
+            max-width: 730px;
         }
 
-        .about-img img {
-            width: 108%;
-            height: 90%;
-            margin-left: 0.5rem
+        .about-img {
+            padding-top: 6em;
         }
-
-      
     
+        }
         .nav-active {
             transform: translateX(0%);
         }
@@ -864,7 +918,7 @@ ul {
 }
 
 
-}
+
 
 @media (max-width: 480px)  {
     .logo {
@@ -873,13 +927,27 @@ ul {
 
    .about-img {
     padding-top: 2em;
+    margin-top: 3rem;
 }
+
+
   }
 
-  @media (max-width: 400px) {
+  @media (max-width: 413px) {
+
+   
+    .logo {
+      font-size: 17px;
+      padding-bottom: 0.5em;
+     
+    }
+  }
+
+  @media (max-width: 395px) {
 
     .logo {
-      font-size: 15px;
+      font-size: 17px;
+      padding-bottom: 0em;
     }
   }
 
