--- a/konditionen.css
+++ b/konditionen.css
@@ -295,7 +295,6 @@ table {
 }
 
 
-  
   .table-line {
     flex-grow: 1;
     border-bottom: 1px solid black;
@@ -439,6 +438,10 @@ table {
     display: flex;           
     flex-direction: column;  
     align-items: flex-start; 
+}
+
+.spacing {
+    padding-top: 1em;
 }
 
 
@@ -1205,13 +1208,15 @@ h2 {
 
     .signatures {
         width: 100%;
+        
     }
 
     .signatures span {
-        flex-basis: auto; /* On larger screens, the spans will go back to their normal width, allowing them to sit next to each other if there's enough space. */
-    }
+        flex-basis: auto; 
+        font-size: 7px;
 }
 
+}
 @media(max-width: 574px) {
     main {
         width: 100%;
