--- a/index.css
+++ b/index.css
@@ -631,10 +631,7 @@ ul {
         width: 100%;
      }
 
-     .about-img iframe {
-        width: 600px;
-        height: 400px;
-    }
+ 
     
 
 }
@@ -770,9 +767,12 @@ ul {
             order: 2;
         }
 
-        .about-img .down {
+        .about-img img {
             width: 100%;
+            height: 80%;
         }
+
+
 
         .footer {
             position: absolute;
