--- a/uber.css
+++ b/uber.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -78,6 +80,11 @@ header {
      z-index: 10001;
      display: none;  
  }
+ 
+  .buchen {
+    visibility: hidden;
+   }
+  
 
  .btn {
   background-color: var(--primary-color);
@@ -190,8 +197,6 @@ transition: var(--transition-2);
 .box-img img {
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
-  padding: 12px;
 }
 
 .box h2 {
@@ -694,6 +699,13 @@ list-style: none;
      margin-top: 0.5rem;
       color: white;   
   }
+  
+    .navbar a {
+        font-size: 1rem;
+        padding: 20px 30px;
+        color: white;
+        font-weight: 500; 
+    }
 
   .menu-container, .menu-container2 {
     grid-template-columns: repeat(auto-fit, minmax(500px,auto));
@@ -706,11 +718,11 @@ list-style: none;
 
 
   
-  .navbar a {
-      font-size: 1.5rem;
-      padding-left: 40px;
-      
-  }
+   .navbar a {
+        padding-left: 20px; 
+        padding: 10px 20px;
+    }
+    
   .menu-container, .menu-container2 {
     grid-template-columns: repeat(auto-fit, minmax(400px,auto));
     grid-gap: 4.0rem;
@@ -729,16 +741,18 @@ list-style: none;
   
 }
 
+@media (max-width: 1300px) {
+    .navbar a {
+        font-size: 0.7rem;
+        padding: 10px 15px;
+    }
+
+}
+
 
 
 @media (max-width: 1110px) {
 
-  .navbar a {
-      font-size: 17px;
-      padding-left: 0px; 
-      padding: 6px 20px;
-      width: 100px;
-  }
 
   .menu-container, .menu-container2 {
     grid-template-columns: repeat(auto-fit, minmax(200px,auto));
@@ -767,28 +781,22 @@ list-style: none;
           z-index: 1000;
            }
   
-           .navbar a {
-              float: none;
-              padding-left: 0px;
-              letter-spacing: 3px;
-              font-size: 10px;
-              font-weight: 900;
-              text-transform: uppercase;
-              margin-left: auto;
-              margin-right: auto;
-              position: relative;
-          }
+            .navbar a {
+                    float: none;
+                    padding-left: 0px;
+                    letter-spacing: 3px;
+                    font-size: 14px;
+                    font-weight: bold; 
+                }
+            
           
-           .kondi {
-              padding-right: 1.5em;
-              position: absolute;
-          }
+        
 
 
            .navbar li  {
               opacity: 0;
               padding-bottom: 26px;
-              padding-top: 26px;  
+    
            }
 
   
@@ -801,6 +809,11 @@ list-style: none;
               top: 2.7%;
               color: white;
           }
+          
+            .buchen {
+                    visibility: visible;
+                   }
+
 
           .logo {
               display: block;
@@ -842,7 +855,7 @@ list-style: none;
       display: inline-block;
       text-align: center;
       vertical-align: middle;
-      line-height: 90px;
+      line-height: 30px;
       transform: translateX(100%);
       transition: transform 0.5s ease-in;
       z-index: 1000;
@@ -855,15 +868,6 @@ list-style: none;
        
   
   
-       .navbar li  {
-         
-          margin-left: 0rem;
-          opacity: 0;
-          padding-bottom: 26px;
-          padding-top: 26px;  
-       }
-  
-
        
        header {
   
@@ -1026,4 +1030,5 @@ list-style: none;
     
 
           
+      
       
