--- a/konditionen.css
+++ b/konditionen.css
@@ -836,6 +836,7 @@ h2 {
         padding-top: 1em;
         margin-left: 2rem;
         font-size: 35px;
+        max-width: 1200px;
     }
   
     
@@ -849,6 +850,7 @@ h2 {
         padding-top: 1em;
         margin-left: 2rem;
         font-size: 25px;
+        max-width: 1100px;
     }
 
     h1 {
@@ -887,6 +889,7 @@ h2 {
         padding-top: 1em;
         margin-left: 1rem;
         font-size: 35px;
+        max-width: 950px;
     }
 
     .logo { 
@@ -911,7 +914,6 @@ h2 {
 @media (max-width: 950px)  {
     main {
         width: 100%;
-        
         padding-top: 1em;
         margin-left: 1rem;
         font-size: 35px;
@@ -927,7 +929,8 @@ h2 {
         font-size: 12px;
     }
 
- td span {
+ 
+    td span {
         font-size: 14px;
     }
 
