--- a/map.css
+++ b/map.css
@@ -26,16 +26,6 @@ body {
 }
 
 
-
-.warning {
-  background-color: #ffcc00;
-  color: #333;
-  padding: 10px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 16px;
-}
-
 html::-webkit-scrollbar {
     width: 0.5rem;
 }
@@ -361,6 +351,63 @@ iframe {
     background: var(--main-color);
 }
 
+.col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    max-width: 90%;
+    margin: 2rem auto;
+    background: linear-gradient(to right, #87cefa, #add8e6); 
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: all 0.3s ease-in-out;
+}
+
+.col:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+
+.content-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.content-img, .content-text {
+    flex-basis: 45%;
+    padding: 2rem;
+}
+
+.content-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.content-text h2 {
+    margin-bottom: 0.5rem;
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 2rem;
+    color: #185abc; /* Dark Blue Text */
+}
+
+.content-text h3 {
+    margin-bottom: 1rem;
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 1.5rem;
+    color: #00897b; /* Teal Text */
+}
+
+.content-text p {
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 1.125rem;
+    color: #4d4d4d;
+    line-height: 1.6;
+}
+
 
 .container {
     max-width: 1170px;
@@ -513,13 +560,6 @@ b {
  }
 
 
- .small-img-row {
-    margin-left: 9rem;
-    width: 84%;
-}
-
-
-
 
  }
 
@@ -580,10 +620,6 @@ b {
         width: 100%;
      }
 
-     .small-img-row {
-        margin-left: 7rem;
-        width: 85%;
-    }
 
 }
 
@@ -593,12 +629,6 @@ b {
     padding-right: 6em;
     padding-left: 5em;
 }
-
-.small-img-row {
-    margin-left: 5rem;
-    width: 88%;
-}
-
 }
 
 @media (max-width: 1300px) {
@@ -613,11 +643,6 @@ b {
 
 @media (max-width: 1110px) {
 
-
-    .small-img-row {
-        margin-left: 3rem;
-        width: 87%;
-    }
 
     .project-title {
         font-size: 20px;
@@ -639,10 +664,6 @@ b {
         padding-left: 3em;
     }
 
-    .small-img-row {
-        width: 89%;
-    }
-    
 
 
      
@@ -890,11 +911,12 @@ b {
             padding-top: 2em;
           }
 
-
-.small-img-row {
-    margin-left: 2rem;
-    width: 91%;
-}
+          .content-row {
+            flex-direction: column;
+        }
+        .content-img, .content-text {
+            flex-basis: 100%;
+        }
 
         }
         .nav-active {
@@ -918,12 +940,6 @@ b {
 
 @media (max-width: 600px)  {
 
-    .small-img-row {
-        width: 89%;
-        display: block;
-        padding: 12px;
-
-    }
 
     .project-title {
         padding-top: 12px;
@@ -950,9 +966,7 @@ b {
     .logo {
       font-size: 22px;
    }
-   .small-img-row {
-    width: 85%;
-}
+
 
 .project-title {
     font-size: 16px;
