--- a/index.css
+++ b/index.css
@@ -629,11 +629,26 @@ ul {
 }
 
 
+@media (max-width: 1460px) {
+
+
+    .about-img img {
+        width: 90%;
+        height: 80%;
+    }
+
+
+}
 @media (max-width: 1300px) {
     .navbar a {
         font-size: 0.7rem;
         padding: 10px 15px;
     }
+
+    .text p {
+        font-size: 1.3rem;
+    }
+
 
 }
 
