--- a/formular.css
+++ b/formular.css
@@ -276,6 +276,14 @@ h1 {
     border-radius: 100%;
   }
 
+  .flatpickr-time .numInputWrapper {
+    width: 50px;
+}
+
+.flatpickr-time .numInputWrapper:nth-child(3),
+.flatpickr-time .numInputWrapper:nth-child(4) {
+    display: none;
+}
 
 
   .footer {
