--- a/formular.css
+++ b/formular.css
@@ -498,7 +498,7 @@ form {
 
     .logo {
       display: block;
-   margin-left: auto;
+   margin-left: 4rem;
    margin-right: auto;
      font-size: 40px;
   }
@@ -652,6 +652,7 @@ to{
       @media (max-width: 480px)  {
         .logo {
           font-size: 22px;
+          margin-left: auto;
        }
 
        h1 {
