--- a/gallery.css
+++ b/gallery.css
@@ -433,7 +433,7 @@ header {
 
         .logo {
             display: block;
-         margin-left: auto;
+            margin-left: 4rem;
          margin-right: auto;
            font-size: 40px;
         }
@@ -561,8 +561,10 @@ header {
 
         @media (max-width: 470px) {
             .logo {
+                margin-left: auto;
+                margin-right: auto;
                 font-size: 22px;
-             }
+               }
 
              .gallery {
                 margin-top: 3rem;
