--- a/gallery.css
+++ b/gallery.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -21,6 +24,17 @@ body {
     background-color:#f3f3f3;
     overflow-x: hidden; 
 }
+
+
+.warning {
+  background-color: #ffcc00;
+  color: #333;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
 html::-webkit-scrollbar {
     width: 0.5rem;
 }
@@ -100,7 +114,7 @@ header {
    }
    
    .navbar a {
-       font-size: 1.6rem;
+       font-size: 1.2rem;
        padding: 20px 40px;
        color: white;
        font-weight: 700;
@@ -121,6 +135,11 @@ header {
    .navbar a:hover::after {
        width: 100%;
    }
+
+   .buchen {
+    visibility: hidden;
+   }
+
    
    #menu-icon {
        font-size: 24px;
@@ -168,7 +187,7 @@ header {
   .full-img {
     width: 100%;
     height: 100vh;
-    background: rgba(0,0,0,0.9);
+    background: rgba(0,0,0,0.7);
     position: fixed;
     top: 0;
     left: 0;
@@ -309,11 +328,12 @@ header {
 
 @media (max-width: 1920px) {
 
-   .navbar a {
-       font-size: 1rem;
-       padding-left: 40px;
-       
-   }
+      .navbar a {
+        font-size: 0.8rem;
+        padding: 20px 30px;
+        color: white;
+        font-weight: 500; 
+    }
 
    .logo {
     font-size: 48px;
@@ -322,9 +342,9 @@ header {
 }
 
 @media (max-width: 1640px) {
-    .navbar a {
-        padding-left: 40px;
-        
+        .navbar a {
+        padding-left: 20px; 
+        padding: 10px 20px;
     }
 
     .logo { 
@@ -341,15 +361,14 @@ header {
 }
 
 
-@media (max-width: 1110px) {
-
+@media (max-width: 1300px) {
     .navbar a {
-        padding-left: 0px; 
-        padding: 6px 20px;
-        width: 100px;
+        font-size: 0.7rem;
+        padding: 10px 15px;
     }
 
 }
+
 @media (max-width: 920px) {   
     body {
         overflow-x: hidden; 
@@ -375,7 +394,6 @@ header {
         background-color: black;
         display: flex;
         width: 70%;
-        
         display: inline-block;
         text-align: center;
         vertical-align: middle;
@@ -398,6 +416,11 @@ header {
              opacity: 0;
              padding-bottom: 26px;
          }
+
+         .buchen {
+            visibility: visible;
+           }
+
          
          #menu-icon {
             display: block;
@@ -410,7 +433,7 @@ header {
 
         .logo {
             display: block;
-         margin-left: auto;
+            margin-left: 4rem;
          margin-right: auto;
            font-size: 40px;
         }
@@ -476,6 +499,11 @@ header {
 
 
     @media (max-width: 780px)  {
+        
+              .warning {
+   margin-top: 4rem;
+  }
+
 
    
         .navbar {
@@ -488,7 +516,7 @@ header {
             display: inline-block;
             text-align: center;
             vertical-align: middle;
-            line-height: 90px;
+            line-height: 30px;
             transform: translateX(100%);
             transition: transform 0.5s ease-in;
             z-index: 1000;
@@ -533,26 +561,40 @@ header {
 
         @media (max-width: 470px) {
             .logo {
+                margin-left: auto;
+                margin-right: auto;
                 font-size: 22px;
-             }
+               }
 
              .gallery {
                 margin-top: 3rem;
             }
-            
-            
+
             .close-icon {
                 margin-top: 3rem;
             }
          
         }
 
-        @media (max-width: 400px) {
+        @media (max-width: 413px) {
 
+   
             .logo {
-              font-size: 15px;
+              font-size: 17px;
+              padding-bottom: 0.5em;
+             
             }
           }
+        
+          @media (max-width: 395px) {
+        
+            .logo {
+              font-size: 17px;
+              padding-bottom: 0em;
+            }
+          }
+
+    
         
         @media (max-width: 380px)  {
           
