--- a/konditionen.css
+++ b/konditionen.css
@@ -765,6 +765,10 @@ h2 {
         padding: 10px 20px;
     }
 
+    main {
+        max-width: 1500px;
+    }
+
     main p {
         font-size: 37px;
     }
