--- a/gallery.css
+++ b/gallery.css
@@ -147,6 +147,40 @@ header {
        z-index: 10001;
        display: none;  
    }
+
+   .horizontal-menu {
+    display: none;
+    overflow-x: auto;
+    white-space: nowrap;
+    background-color:#848c8c;
+    padding: 5px 0;
+    position: fixed;
+    top: 60px; /* Visina headera, prilagodite po potrebi */
+    width: 100%;
+    z-index: 1000; /* Postavlja se iznad sadržaja ispod */
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.menu-item {
+    display: inline-block;
+    padding: 8px 20px;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    text-decoration: none;
+    color: white; 
+}
+
+.menu-item a {
+    color: white;
+    font-size: 13.5px;
+}
+
+.menu-item:not(:last-child) {
+    border-right: 1px solid #ccc;
+}
+
   
    .btn {
     background-color: var(--primary-color);
@@ -459,6 +493,14 @@ header {
             }
 
             
+            .horizontal-menu {
+                display: flex;
+
+            }
+
+            .menu-item {
+                text-decoration: none;
+            }
     
          .nav-active {
              transform: translateX(0%);
