--- a/preise.css
+++ b/preise.css
@@ -384,6 +384,40 @@ header {
      display: none;  
  }
  
+ .horizontal-menu {
+  display: none;
+  overflow-x: auto;
+  white-space: nowrap;
+  background-color:#848c8c;
+  padding: 5px 0;
+  position: fixed;
+  top: 60px; 
+  width: 100%;
+  z-index: 1000; 
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+
+.menu-item {
+  display: inline-block;
+  padding: 8px 20px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  text-decoration: none;
+  color: white; 
+}
+
+.menu-item a {
+  color: white;
+  font-size: 13.5px;
+}
+
+.menu-item:not(:last-child) {
+  border-right: 1px solid #ccc;
+}
+
+
   .buchen {
     visibility: hidden;
    }
@@ -631,6 +665,15 @@ transition: var(--transition-2);
                   color: white;
               }
               
+              .horizontal-menu {
+                display: flex;
+
+            }
+
+            .menu-item {
+                text-decoration: none;
+            }
+
                 .buchen {
                         visibility: visible;
                        }
@@ -691,19 +734,19 @@ transition: var(--transition-2);
       
            
            header {
-      
-               height: 60px;
-               width: 100%;
-               top: 0;
-               right: 0;
-               z-index: 1000;
-               display: flex;
-               align-items: center;
-               justify-content: space-between;
-               background: black;
-               color: white;
-               padding: 15px 60px; 
-              }
+            height: 60px;
+            width: 100%;
+            top: 0;
+            right: 0;
+            z-index: 1000;
+            display: flex;
+            position: fixed;
+            align-items: center;
+            justify-content: space-between;
+            background: black;
+            color: white;
+            padding: 0.938em 3.75em; 
+           }
               
               .logo {
                 font-size: 30px;
