--- a/preise.css
+++ b/preise.css
@@ -661,7 +661,7 @@ transition: var(--transition-2);
                   cursor: pointer;
                   position: absolute;
                   left: 8%;
-                  top: 2.7%;
+                  top: 33.7%;
                   color: white;
               }
               
@@ -688,6 +688,10 @@ transition: var(--transition-2);
     
               .btn {
                 visibility: hidden;
+              }
+
+              .container {
+                padding-top: 6em;
               }
     
               .footer {
