--- a/konditionen.css
+++ b/konditionen.css
@@ -1403,12 +1403,17 @@ td span {
 
 }
 
+@media (max-width: 435px) {
 
+    .logo {
+        font-size: 17px;
+       }
+
+}
 
 @media (max-width: 420px) {
 
     .logo {
-        font-size: 13px;
         margin-bottom: -0.5rem;
         margin-left:  1.5rem;
        }
@@ -1439,7 +1444,7 @@ td span {
 
    
     .logo {
-      font-size: 11px;
+      font-size: 146x;
       padding-bottom: 0.5em;
      
     }
@@ -1468,7 +1473,7 @@ td span {
 @media (max-width: 380px)  {
   
     .logo {
-        font-size: 10px;
+        font-size: 12px;
      }
 
 
@@ -1488,7 +1493,7 @@ td span {
     }
 
     .logo {
-        font-size: 9px;
+        font-size: 10px;
       }
 
       .fixed {
